added basic functionality

--- a/index.html
+++ b/index.html
@@ -21,28 +21,47 @@
     <![endif]-->
 </head>
 <body>
-<div class="container text-center">
-    FreeCodeCamp Calculator
-    </br>
-    </br>
-    comming soon :)
-    <div>
-        blablablablba
+<div>
+    <div class="container text-center">
+        <h1>FreeCodeCamp Calculator</h1>
+
+
+        <div id="calculator" class="">
+            <div>FreeCodeCamp Calculator</div>
+            <div id="input"></div>
+            <div class="row">
+                <div class="col-xs-3">AC</div>
+                <div class="col-xs-3">CE</div>
+                <div class="col-xs-3"><i class="fa fa-eraser" aria-hidden="true"></i></div>
+                <div class="col-xs-3">/</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3">7</div>
+                <div class="col-xs-3">8</div>
+                <div class="col-xs-3">9</div>
+                <div class="col-xs-3">*</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3">4</div>
+                <div class="col-xs-3">5</div>
+                <div class="col-xs-3">6</div>
+                <div class="col-xs-3">-</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3">1</div>
+                <div class="col-xs-3">2</div>
+                <div class="col-xs-3">3</div>
+                <div class="col-xs-3">+</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3">+/-</div>
+                <div class="col-xs-3">0</div>
+                <div class="col-xs-3">.</div>
+                <div class="col-xs-3">=</div>
+            </div>
+        </div>
     </div>
-    </br>
-    </br>
-    </br>
 </div>
-
-<div id="map" style="width: 400px; height: 300px"></div>
-<label for="latitude">Latitude:</label>
-<input type="text" id="latitude" value="59.942402"/><br/>
-<label for="longitude">Longitude:</label>
-<input type="text" id="longitude" value="30.293661"/><br/>
-<input type="submit" value="Show map"
-       onclick=" showMap(document.getElementById('latitude').value,document.getElementById('longitude').value);"/>
-
-
 <footer class="footer text-center">
     <p class="text-muted">
         Inspired by
@@ -55,10 +74,11 @@
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--<script src="C:\Users\artur.s\.WebStorm2016.2\config\javascript\extLibs\http_ajax.googleapis.com_ajax_libs_jquery_1.11.3_jquery.min.js"></script>-->
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
-
+<noscript><h3>This site requires JavaScript</h3></noscript>
 </body>
 </html>
 
