--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,8 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,65 +23,62 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
-<div>
-    <div class="container text-center">
-        <h1>FreeCodeCamp Calculator</h1>
+    <div>
+        <div class="container text-center baza">
+            <h1>FCC Calculator</h1>
 
-
-        <div id="calculator" class="">
-            <div>FreeCodeCamp Calculator</div>
-            <div id="input"></div>
-            <div class="row">
-                <div class="col-xs-3">AC</div>
-                <div class="col-xs-3">CE</div>
-                <div class="col-xs-3"><i class="fa fa-eraser" aria-hidden="true"></i></div>
-                <div class="col-xs-3">/</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">7</div>
-                <div class="col-xs-3">8</div>
-                <div class="col-xs-3">9</div>
-                <div class="col-xs-3">*</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">4</div>
-                <div class="col-xs-3">5</div>
-                <div class="col-xs-3">6</div>
-                <div class="col-xs-3">-</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">1</div>
-                <div class="col-xs-3">2</div>
-                <div class="col-xs-3">3</div>
-                <div class="col-xs-3">+</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">+/-</div>
-                <div class="col-xs-3">0</div>
-                <div class="col-xs-3">.</div>
-                <div class="col-xs-3">=</div>
+            <div class="calculator" id="calculator">
+                <div>FreeCodeCamp Calculator</div>
+                <div class="log" id="log"></div>
+                <div class="display" id="display"></div>
+                <div class="row">
+                    <div class="col-xs-6">AC</div>
+                    <div class="col-xs-3">CE</div>
+                    <div class="col-xs-3">/</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">7</div>
+                    <div class="col-xs-3">8</div>
+                    <div class="col-xs-3">9</div>
+                    <div class="col-xs-3">*</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">4</div>
+                    <div class="col-xs-3">5</div>
+                    <div class="col-xs-3">6</div>
+                    <div class="col-xs-3">-</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">1</div>
+                    <div class="col-xs-3">2</div>
+                    <div class="col-xs-3">3</div>
+                    <div class="col-xs-3">+</div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-3">.</div>
+                    <div class="col-xs-3">0</div>
+                    <div class="col-xs-6">=</div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<footer class="footer text-center">
-    <p class="text-muted">
-        Inspired by
-        <a href="http://codepen.io/artur_sep/full/LNRxVP/" target="_blank">
-            artur<strong>sęp</strong>
+    <footer class="footer text-center">
+        Inspired by <a href="http://codepen.io/artur_sep/full/LNRxVP/" target="_blank">artur<strong>sęp</strong>
             <script>document.write(new Date().getFullYear());</script>
         </a>
-    </p>
-</footer>
+    </footer>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!--<script src="C:\Users\artur.s\.WebStorm2016.2\config\javascript\extLibs\http_ajax.googleapis.com_ajax_libs_jquery_1.11.3_jquery.min.js"></script>-->
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-<noscript><h3>This site requires JavaScript</h3></noscript>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!--<script src="C:\Users\artur.s\.WebStorm2016.2\config\javascript\extLibs\http_ajax.googleapis.com_ajax_libs_jquery_1.11.3_jquery.min.js"></script>-->
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <noscript>
+        <h3>This site requires JavaScript</h3>
+    </noscript>
 </body>
-</html>
 
+</html>
