--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <footer class="footer text-center">
-        Inspired by <a href="http://codepen.io/artur_sep/full/LNRxVP/" target="_blank">artur<strong>sęp</strong>
+        Coded by <a href="http://codepen.io/artur_sep/full/LNRxVP/" target="_blank">artur<strong>sęp</strong>
             <script>document.write(new Date().getFullYear());</script>
         </a>
     </footer>
