fixed bug with size of the log and display (fixed with textarea)

--- a/index.html
+++ b/index.html
@@ -25,60 +25,64 @@
 </head>
 
 <body>
-  <div>
-         <div class="container text-center baza">
-             <h1>Calculator</h1>
+    <div>
+        <div class="container text-center baza">
+            <h1>Calculator</h1>
 
-             <div class="calculator" id="calculator">
-                 <div>FreeCodeCamp Calculator</div>
-                 <div class="log" id="log"></div>
-                 <div class="display" id="display"></div>
-                 <div class="row">
-                     <div class="col-xs-6">AC</div>
-                     <div class="col-xs-3">CE</div>
-                     <div class="col-xs-3">/</div>
-                 </div>
-                 <div class="row">
-                     <div class="col-xs-3">7</div>
-                     <div class="col-xs-3">8</div>
-                     <div class="col-xs-3">9</div>
-                     <div class="col-xs-3">*</div>
-                 </div>
-                 <div class="row">
-                     <div class="col-xs-3">4</div>
-                     <div class="col-xs-3">5</div>
-                     <div class="col-xs-3">6</div>
-                     <div class="col-xs-3">-</div>
-                 </div>
-                 <div class="row">
-                     <div class="col-xs-3">1</div>
-                     <div class="col-xs-3">2</div>
-                     <div class="col-xs-3">3</div>
-                     <div class="col-xs-3">+</div>
-                 </div>
-                 <div class="row">
-                   <div class="col-xs-3">.</div>
-                     <div class="col-xs-3">0</div>
-                     <div class="col-xs-6">=</div>
-                 </div>
-             </div>
-         </div>
-     </div>
-     <footer class="footer text-center">
-         Coded by <a href="http://codepen.io/artur_sep/full/LNRxVP/" target="_blank">artur<strong>sęp</strong>
+            <div class="calculator" id="calculator">
+                <div id="info">FreeCodeCamp Calculator</div>
+                <!-- <div class="log" id="log"></div> -->
+                <!-- <div class="display" id="display"></div> -->
+
+                <textarea disabled class="log" id="log" rows="1" cols="30"></textarea>
+                <textarea disabled class="display" id="display" rows="1" cols="15"></textarea>
+
+                <div class="row">
+                    <div class="col-xs-6">AC</div>
+                    <div class="col-xs-3">CE</div>
+                    <div class="col-xs-3">/</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">7</div>
+                    <div class="col-xs-3">8</div>
+                    <div class="col-xs-3">9</div>
+                    <div class="col-xs-3">*</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">4</div>
+                    <div class="col-xs-3">5</div>
+                    <div class="col-xs-3">6</div>
+                    <div class="col-xs-3">-</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">1</div>
+                    <div class="col-xs-3">2</div>
+                    <div class="col-xs-3">3</div>
+                    <div class="col-xs-3">+</div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-3">.</div>
+                    <div class="col-xs-3">0</div>
+                    <div class="col-xs-6">=</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer text-center">
+        Coded by <a href="http://codepen.io/artur_sep/full/LNRxVP/" target="_blank">artur<strong>sęp</strong>
              <script>document.write(new Date().getFullYear());</script>
          </a>
-     </footer>
+    </footer>
 
-     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-     <!--<script src="C:\Users\artur.s\.WebStorm2016.2\config\javascript\extLibs\http_ajax.googleapis.com_ajax_libs_jquery_1.11.3_jquery.min.js"></script>-->
-     <!-- Include all compiled plugins (below), or include individual files as needed -->
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/main.js"></script>
-     <noscript>
-         <h3>This site requires JavaScript</h3>
-     </noscript>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!--<script src="C:\Users\artur.s\.WebStorm2016.2\config\javascript\extLibs\http_ajax.googleapis.com_ajax_libs_jquery_1.11.3_jquery.min.js"></script>-->
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <noscript>
+        <h3>This site requires JavaScript</h3>
+    </noscript>
 </body>
 
 </html>
