added width 100% to textareas

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <!-- <div class="log" id="log"></div> -->
                 <!-- <div class="display" id="display"></div> -->
 
-                <textarea disabled class="log" id="log" rows="1" cols="30"></textarea>
-                <textarea disabled class="display" id="display" rows="1" cols="15"></textarea>
+                <textarea disabled class="log" id="log" rows="1"></textarea>
+                <textarea disabled class="display" id="display" rows="1"></textarea>
 
                 <div class="row">
                     <div class="col-xs-6">AC</div>
