--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
 <body>
     <div>
         <div class="container text-center baza">
-            <h1>Calculator</h1>
+            <!-- <h1>Calculator</h1> -->
 
             <div class="calculator" id="calculator">
                 <div id="info">FreeCodeCamp Calculator</div>
                 <!-- <div class="log" id="log"></div> -->
                 <!-- <div class="display" id="display"></div> -->
-
-                <textarea disabled class="log" id="log" rows="1"></textarea>
-                <textarea disabled class="display" id="display" rows="1"></textarea>
+                <div id="ekran">
+                    <textarea disabled class="log" id="log" rows="1"></textarea>
+                    <textarea disabled class="display" id="display" rows="1"></textarea>
+                </div>
 
                 <div class="row">
                     <div class="col-xs-6">AC</div>
